--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
 
     steps:
       - name: Checar repositório
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4 # Atualizado para v4
         with:
           token: ${{ secrets.GH_TOKEN }}
           fetch-depth: 0
@@ -23,10 +23,7 @@ jobs:
         id: version
         run: |
           git fetch --tags
-          LAST_TAG=$(git describe --tags `git rev-list --tags --max-count=1`)
-          if [ -z "$LAST_TAG" ]; then
-            LAST_TAG="v0.0.0"
-          fi
+          LAST_TAG=$(git describe --tags --abbrev=0 2>/dev/null || echo "v0.0.0")
           echo "Versão Atual: $LAST_TAG"
 
           if [ "$LAST_TAG" = "v0.0.0" ]; then
@@ -38,12 +35,11 @@ jobs:
           echo "Commits desde a última tag:"
           echo "$COMMITS"
 
-          # Inicializando variáveis
           MAJOR=0
           MINOR=0
           PATCH=0
-          # Analisando mensagens de commit
-          for COMMIT in "$COMMITS"; do
+
+          while IFS= read -r COMMIT; do
             if [[ "$COMMIT" == *"BREAKING CHANGE"* ]]; then
               MAJOR=1
             elif [[ "$COMMIT" == *"feat"* ]]; then
@@ -51,17 +47,32 @@ jobs:
             elif [[ "$COMMIT" == *"fix"* ]]; then
               PATCH=1
             fi
-          done
+          done <<< "$COMMITS"
 
-      - uses: actions/checkout@v2
+          CURRENT_VERSION=${LAST_TAG#v}
+          NEW_VERSION=$CURRENT_VERSION
+          if [[ $MAJOR -eq 1 ]]; then
+            NEW_VERSION=$(semver -i major $CURRENT_VERSION)
+          elif [[ $MINOR -eq 1 ]]; then
+            NEW_VERSION=$(semver -i minor $CURRENT_VERSION)
+          elif [[ $PATCH -eq 1 ]]; then
+            NEW_VERSION=$(semver -i patch $CURRENT_VERSION)
+          fi
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: 20.x
+          echo "Nova versão: $NEW_VERSION"
+          echo "NEW_VERSION=$NEW_VERSION" >> $GITHUB_ENV
 
-      - name: Install dependencies
-        run: yarn
+      - name: Atualizar versão no package.json
+        run: |
+          npm version ${{ env.NEW_VERSION }} --no-git-tag-version
 
-      - name: Build application
-        run: yarn build
+      - name: Commit e push
+        env:
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+        run: |
+          git config --global user.name 'github-actions'
+          git config --global user.email 'github-actions@github.com'
+          git add package.json
+          git commit -m "chore(release): version ${{ env.NEW_VERSION }}"
+          git tag v${{ env.NEW_VERSION }}
+          git push origin main --tags
